--- a/manifest.yml
+++ b/manifest.yml
@@ -3,7 +3,10 @@ applications:
 - name: first-push
   instances: 1
   memory: 32M
-  disk_quota: 64M
+  disk_quota: 256M
+  path: ./sample-app.zip
+  routes:
+  - ((route))
   buildpacks:
   - go_buildpack
   env:
