--- a/ci/tasks/unit-test.yml
+++ b/ci/tasks/unit-test.yml
@@ -4,7 +4,7 @@ platform: linux
 image_resource:
   type: docker-image
   source:
-    repository: rscale/ubuntu-go
+    repository: golang
     tag: 'latest'
 
 inputs:
