correct manifest rc type to yml in put

--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -98,7 +98,7 @@ jobs:
   - put: rc-app
     params: {file: rc/sample-app-*.zip}
   - put: rc-manifest
-    params: {file: rc/manifest-*.zip}
+    params: {file: rc/manifest-*.yml}
   - put: version
     params: {file: version/version}  
 
