--- a/manifest.yml
+++ b/manifest.yml
@@ -1,11 +1,8 @@
 ---
 applications:
-- name: first-push
+- name: dhs-sample
   instances: 1
   memory: 32M
   disk_quota: 64M
-  path: ./sample-app.zip
-  routes:
-  - route: ((route))
   buildpacks:
   - go_buildpack
