--- a/ci/tasks/integration-test.yml
+++ b/ci/tasks/integration-test.yml
@@ -5,7 +5,7 @@ image_resource:
   type: docker-image
   source:
     repository: rscale/ubuntu-cf
-    tag: 'latest'
+    tag: '7.2.0'
 
 inputs:
   - name: rc-app
